--- a/assets/main.css
+++ b/assets/main.css
@@ -144,7 +144,7 @@ h1 {
 /* ************* Banner ********************* */
 
 #banner {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(./images/background1.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../images/background1.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
